fix(css): collapse

--- a/src/collapse/mixins.less
+++ b/src/collapse/mixins.less
@@ -2,7 +2,7 @@
   .this() {
     max-height: 0;
     overflow: hidden;
-    transition-duration: ~"calc(var(--animation-duration) * 2)";
+    transition-duration: ~"calc(var(--common-animationDuration-primary) * 2)";
     transition-timing-function: cubic-bezier(0, 1, 0, 1);
     transition-property: max-height;
 
